@@ -72,7 +72,7 @@ class Ternary(NonOrthGraph):
         '''Initialise ternary plot.'''
         NonOrthGraph.__init__(self, parent, name=name)
         if type(self) == NonOrthGraph:
-            self.readDefaults()
+            self.linkToStylesheet()
 
     @classmethod
     def addSettings(klass, s):
